--- a/content0.html
+++ b/content0.html
@@ -1,3 +1,60 @@
+<a id="crochue"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Point Reyes</h3>
+  </li>
+  <li class="date">
+    August 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/ptreyes/IMG_2015.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img width="160" height="120" src="thumbs/ptreyes/IMG_2015.jpg" alt="IMG_2015.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/ptreyes/IMG_2017.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img width="160" height="120" src="thumbs/ptreyes/IMG_2017.jpg" alt="IMG_2017.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/ptreyes/IMG_2019.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img width="90" height="120" src="thumbs/ptreyes/IMG_2019.jpg" alt="IMG_2019.jpg" />
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/ptreyes/IMG_2027.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img width="160" height="120" src="thumbs/ptreyes/IMG_2027.jpg" alt="IMG_2027.jpg" />
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/ptreyes/IMG_2033.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img width="160" height="120" src="thumbs/ptreyes/IMG_2033.jpg" alt="IMG_2033.jpg" />
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/ptreyes/IMG_2037.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img width="160" height="120" src="thumbs/ptreyes/IMG_2037.jpg" alt="IMG_2037.jpg" />
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Shuteye"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -15,63 +72,90 @@
     <a class="highslide" href="hq/shuteye2/P8107374.jpg"
       title=""
       onclick="return hs.expand(this, config_shuteye2)">
-      <img width="160" height="120" src="thumbs/shuteye2/P8107374.jpg" alt="P8107374.jpg" />
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107374.jpg" alt="P8107374.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/P8107374.jpg" alt="P8107374.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/shuteye2/P8107409.jpg"
       title=""
       onclick="return hs.expand(this, config_shuteye2)">
-      <img width="160" height="120" src="thumbs/shuteye2/P8107409.jpg" alt="P8107409.jpg" />
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107409.jpg" alt="P8107409.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/P8107409.jpg" alt="P8107409.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/shuteye2/P8107463.jpg"
       title=""
       onclick="return hs.expand(this, config_shuteye2)">
-      <img width="160" height="120" src="thumbs/shuteye2/P8107463.jpg" alt="P8107463.jpg" />
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107463.jpg" alt="P8107463.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/P8107463.jpg" alt="P8107463.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot4">
     <a class="highslide" href="hq/shuteye2/P8107511.jpg"
       title=""
       onclick="return hs.expand(this, config_shuteye2)">
-      <img width="160" height="120" src="thumbs/shuteye2/P8107511.jpg" alt="P8107511.jpg" />
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107511.jpg" alt="P8107511.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/P8107511.jpg" alt="P8107511.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot5">
     <a class="highslide" href="hq/shuteye2/P8107552.jpg"
       title=""
       onclick="return hs.expand(this, config_shuteye2)">
-      <img width="160" height="120" src="thumbs/shuteye2/P8107552.jpg" alt="P8107552.jpg" />
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8107552.jpg" alt="P8107552.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/P8107552.jpg" alt="P8107552.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot0">
     <a class="highslide" href="hq/shuteye2/P8117587.jpg"
       title=""
       onclick="return hs.expand(this, config_shuteye2)">
-      <img width="90" height="120" src="thumbs/shuteye2/P8117587.jpg" alt="P8117587.jpg" />
+      <img class="lazy galleries/shuteye2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8117587.jpg" alt="P8117587.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/shuteye2/P8117587.jpg" alt="P8117587.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot1">
     <a class="highslide" href="hq/shuteye2/P8117622.jpg"
       title=""
       onclick="return hs.expand(this, config_shuteye2)">
-      <img width="90" height="120" src="thumbs/shuteye2/P8117622.jpg" alt="P8117622.jpg" />
+      <img class="lazy galleries/shuteye2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/P8117622.jpg" alt="P8117622.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/shuteye2/P8117622.jpg" alt="P8117622.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/shuteye2/Y999_panorama.jpg"
       title=""
       onclick="return hs.expand(this, config_shuteye2)">
-      <img width="654" height="120" src="thumbs/shuteye2/Y999_panorama.jpg" alt="Y999_panorama.jpg" />
+      <img class="lazy galleries/shuteye2" width="654" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/Y999_panorama.jpg" alt="Y999_panorama.jpg" />
+      <noscript>
+        <img width="654" height="120" src="thumbs/shuteye2/Y999_panorama.jpg" alt="Y999_panorama.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/shuteye2/Z999.jpg"
       title=""
       onclick="return hs.expand(this, config_shuteye2)">
-      <img width="160" height="120" src="thumbs/shuteye2/Z999.jpg" alt="Z999.jpg" />
+      <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/Z999.jpg" alt="Z999.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shuteye2/Z999.jpg" alt="Z999.jpg" />
+      </noscript>
     </a>
   </div>
   <div style="clear:both"></div>
@@ -442,179 +526,4 @@
         Your browser does not support the video tag.
       </video> 
     </div>
-</div>
-<a id="yoclassics"></a>
-<ul class="titlebar">
-  <li class="title">
-    <h3>Yosemite Classics</h3>
-  </li>
-  <li class="date">
-    March 2014
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/yoclassics/IMG_1365.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1365.jpg" alt="IMG_1365.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yoclassics/IMG_1365.jpg" alt="IMG_1365.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/yoclassics/IMG_1368.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1368.jpg" alt="IMG_1368.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yoclassics/IMG_1368.jpg" alt="IMG_1368.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/yoclassics/IMG_1373.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1373.jpg" alt="IMG_1373.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yoclassics/IMG_1373.jpg" alt="IMG_1373.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/yoclassics/IMG_1384.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1384.jpg" alt="IMG_1384.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yoclassics/IMG_1384.jpg" alt="IMG_1384.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/yoclassics/IMG_1413.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1413.jpg" alt="IMG_1413.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yoclassics/IMG_1413.jpg" alt="IMG_1413.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/yoclassics/IMG_1422.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1422.jpg" alt="IMG_1422.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yoclassics/IMG_1422.jpg" alt="IMG_1422.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/yoclassics/IMG_1431.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1431.jpg" alt="IMG_1431.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yoclassics/IMG_1431.jpg" alt="IMG_1431.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/yoclassics/IMG_1433.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1433.jpg" alt="IMG_1433.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yoclassics/IMG_1433.jpg" alt="IMG_1433.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/yoclassics/IMG_1451.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1451.jpg" alt="IMG_1451.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yoclassics/IMG_1451.jpg" alt="IMG_1451.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/yoclassics/IMG_1478.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1478.jpg" alt="IMG_1478.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yoclassics/IMG_1478.jpg" alt="IMG_1478.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/yoclassics/IMG_1497.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1497.jpg" alt="IMG_1497.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yoclassics/IMG_1497.jpg" alt="IMG_1497.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/yoclassics/IMG_1518.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1518.jpg" alt="IMG_1518.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yoclassics/IMG_1518.jpg" alt="IMG_1518.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/yoclassics/IMG_1542.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1542.jpg" alt="IMG_1542.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yoclassics/IMG_1542.jpg" alt="IMG_1542.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/yoclassics/IMG_1548.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1548.jpg" alt="IMG_1548.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yoclassics/IMG_1548.jpg" alt="IMG_1548.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/yoclassics/STA_1483-1487panorama.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="490" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/STA_1483-1487panorama.jpg" alt="STA_1483-1487panorama.jpg" />
-      <noscript>
-        <img width="490" height="120" src="thumbs/yoclassics/STA_1483-1487panorama.jpg" alt="STA_1483-1487panorama.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/yoclassics/topo.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yoclassics)">
-      <img class="lazy galleries/yoclassics" width="158" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/topo.jpg" alt="topo.jpg" />
-      <noscript>
-        <img width="158" height="120" src="thumbs/yoclassics/topo.jpg" alt="topo.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
 </div>
