--- a/content1.html
+++ b/content1.html
@@ -1,3 +1,178 @@
+<a id="yoclassics"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Yosemite Classics</h3>
+  </li>
+  <li class="date">
+    March 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/yoclassics/IMG_1365.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1365.jpg" alt="IMG_1365.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yoclassics/IMG_1365.jpg" alt="IMG_1365.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/yoclassics/IMG_1368.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1368.jpg" alt="IMG_1368.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/yoclassics/IMG_1368.jpg" alt="IMG_1368.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/yoclassics/IMG_1373.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1373.jpg" alt="IMG_1373.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yoclassics/IMG_1373.jpg" alt="IMG_1373.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/yoclassics/IMG_1384.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1384.jpg" alt="IMG_1384.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yoclassics/IMG_1384.jpg" alt="IMG_1384.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/yoclassics/IMG_1413.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1413.jpg" alt="IMG_1413.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yoclassics/IMG_1413.jpg" alt="IMG_1413.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/yoclassics/IMG_1422.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1422.jpg" alt="IMG_1422.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yoclassics/IMG_1422.jpg" alt="IMG_1422.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/yoclassics/IMG_1431.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1431.jpg" alt="IMG_1431.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/yoclassics/IMG_1431.jpg" alt="IMG_1431.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/yoclassics/IMG_1433.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1433.jpg" alt="IMG_1433.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yoclassics/IMG_1433.jpg" alt="IMG_1433.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/yoclassics/IMG_1451.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1451.jpg" alt="IMG_1451.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/yoclassics/IMG_1451.jpg" alt="IMG_1451.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/yoclassics/IMG_1478.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1478.jpg" alt="IMG_1478.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yoclassics/IMG_1478.jpg" alt="IMG_1478.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/yoclassics/IMG_1497.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1497.jpg" alt="IMG_1497.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/yoclassics/IMG_1497.jpg" alt="IMG_1497.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/yoclassics/IMG_1518.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1518.jpg" alt="IMG_1518.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yoclassics/IMG_1518.jpg" alt="IMG_1518.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/yoclassics/IMG_1542.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1542.jpg" alt="IMG_1542.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yoclassics/IMG_1542.jpg" alt="IMG_1542.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/yoclassics/IMG_1548.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/IMG_1548.jpg" alt="IMG_1548.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/yoclassics/IMG_1548.jpg" alt="IMG_1548.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/yoclassics/STA_1483-1487panorama.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="490" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/STA_1483-1487panorama.jpg" alt="STA_1483-1487panorama.jpg" />
+      <noscript>
+        <img width="490" height="120" src="thumbs/yoclassics/STA_1483-1487panorama.jpg" alt="STA_1483-1487panorama.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/yoclassics/topo.jpg"
+      title=""
+      onclick="return hs.expand(this, config_yoclassics)">
+      <img class="lazy galleries/yoclassics" width="158" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yoclassics/topo.jpg" alt="topo.jpg" />
+      <noscript>
+        <img width="158" height="120" src="thumbs/yoclassics/topo.jpg" alt="topo.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="crochue"></a>
 <ul class="titlebar">
   <li class="title">
@@ -503,141 +678,6 @@
       <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_9999.jpg" alt="IMG_9999.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/marion2/IMG_9999.jpg" alt="IMG_9999.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Sierra"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Sierra Adventures</h3>
-  </li>
-  <li class="date">
-    November 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/sierra/IMG_0958.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0958.jpg" alt="IMG_0958.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_0958.jpg" alt="IMG_0958.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/sierra/IMG_0962.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0962.jpg" alt="IMG_0962.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_0962.jpg" alt="IMG_0962.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/sierra/IMG_0962prime.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="212" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0962prime.jpg" alt="IMG_0962prime.jpg" />
-      <noscript>
-        <img width="212" height="120" src="thumbs/sierra/IMG_0962prime.jpg" alt="IMG_0962prime.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/sierra/IMG_0975.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0975.jpg" alt="IMG_0975.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_0975.jpg" alt="IMG_0975.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/sierra/IMG_0977.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0977.jpg" alt="IMG_0977.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_0977.jpg" alt="IMG_0977.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/sierra/IMG_0978.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0978.jpg" alt="IMG_0978.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/sierra/IMG_0978.jpg" alt="IMG_0978.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/sierra/IMG_0988.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0988.jpg" alt="IMG_0988.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_0988.jpg" alt="IMG_0988.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/sierra/IMG_1002.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1002.jpg" alt="IMG_1002.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_1002.jpg" alt="IMG_1002.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/sierra/IMG_1025.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1025.jpg" alt="IMG_1025.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/sierra/IMG_1025.jpg" alt="IMG_1025.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/sierra/IMG_1037.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1037.jpg" alt="IMG_1037.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/sierra/IMG_1037.jpg" alt="IMG_1037.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/sierra/IMG_1038.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1038.jpg" alt="IMG_1038.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/sierra/IMG_1038.jpg" alt="IMG_1038.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/sierra/IMG_1044.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="105" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1044.jpg" alt="IMG_1044.jpg" />
-      <noscript>
-        <img width="105" height="120" src="thumbs/sierra/IMG_1044.jpg" alt="IMG_1044.jpg" />
       </noscript>
     </a>
   </div>
