--- a/content2.html
+++ b/content2.html
@@ -1,3 +1,138 @@
+<a id="Sierra"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Sierra Adventures</h3>
+  </li>
+  <li class="date">
+    November 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/sierra/IMG_0958.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0958.jpg" alt="IMG_0958.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_0958.jpg" alt="IMG_0958.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/sierra/IMG_0962.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0962.jpg" alt="IMG_0962.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_0962.jpg" alt="IMG_0962.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/sierra/IMG_0962prime.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="212" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0962prime.jpg" alt="IMG_0962prime.jpg" />
+      <noscript>
+        <img width="212" height="120" src="thumbs/sierra/IMG_0962prime.jpg" alt="IMG_0962prime.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/sierra/IMG_0975.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0975.jpg" alt="IMG_0975.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_0975.jpg" alt="IMG_0975.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/sierra/IMG_0977.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0977.jpg" alt="IMG_0977.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_0977.jpg" alt="IMG_0977.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/sierra/IMG_0978.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0978.jpg" alt="IMG_0978.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/sierra/IMG_0978.jpg" alt="IMG_0978.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/sierra/IMG_0988.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0988.jpg" alt="IMG_0988.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_0988.jpg" alt="IMG_0988.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/sierra/IMG_1002.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1002.jpg" alt="IMG_1002.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_1002.jpg" alt="IMG_1002.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/sierra/IMG_1025.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1025.jpg" alt="IMG_1025.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/sierra/IMG_1025.jpg" alt="IMG_1025.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/sierra/IMG_1037.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1037.jpg" alt="IMG_1037.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/sierra/IMG_1037.jpg" alt="IMG_1037.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/sierra/IMG_1038.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1038.jpg" alt="IMG_1038.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/sierra/IMG_1038.jpg" alt="IMG_1038.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/sierra/IMG_1044.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="105" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1044.jpg" alt="IMG_1044.jpg" />
+      <noscript>
+        <img width="105" height="120" src="thumbs/sierra/IMG_1044.jpg" alt="IMG_1044.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Shuteye"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -418,139 +553,3 @@
   </div>
   <div style="clear:both"></div>
 </div>
-<a id="Tahoe"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Tahoe</h3>
-  </li>
-  <li class="date">
-    June 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/tahoe/05.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/05.jpg" alt="05.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/05.jpg" alt="05.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/tahoe/25.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/25.jpg" alt="25.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/25.jpg" alt="25.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/tahoe/30.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/30.jpg" alt="30.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/30.jpg" alt="30.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/tahoe/35.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/35.jpg" alt="35.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/35.jpg" alt="35.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/tahoe/40.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/40.jpg" alt="40.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/40.jpg" alt="40.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/tahoe/45.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/45.jpg" alt="45.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/45.jpg" alt="45.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/tahoe/50.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/50.jpg" alt="50.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/50.jpg" alt="50.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/tahoe/56.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/56.jpg" alt="56.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/56.jpg" alt="56.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/tahoe/58.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/58.jpg" alt="58.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/58.jpg" alt="58.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/tahoe/60.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/60.jpg" alt="60.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/60.jpg" alt="60.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/tahoe/DSCN0628.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/DSCN0628.jpg" alt="DSCN0628.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/DSCN0628.jpg" alt="DSCN0628.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/tahoe/IMG_0709.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/IMG_0709.jpg" alt="IMG_0709.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/IMG_0709.jpg" alt="IMG_0709.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-
