--- a/content6.html
+++ b/content6.html
@@ -1,3 +1,227 @@
+<a id="Shasta"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Shasta</h3>
+  </li>
+  <li class="date">
+    May 2012
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/shasta/IMG_6543.jpg"
+      title="Avalanche Gulch viewed from Bunny Flat. Our route, Casaval Ridge, is on the left."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6543.jpg" alt="IMG_6543.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6543.jpg" alt="IMG_6543.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/shasta/IMG_6549.jpg"
+      title="Jack, Pat and I are ready to leave Bunny Flat to set up camp at Helen Lake. It is about 1:30pm."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6549.jpg" alt="IMG_6549.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6549.jpg" alt="IMG_6549.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/shasta/IMG_6565.jpg"
+      title="Re-fueling on a little rock island in an ocean of sloggy snow."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6565.jpg" alt="IMG_6565.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6565.jpg" alt="IMG_6565.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/shasta/IMG_6586.jpg"
+      title="Gendarmes on Casaval Ridge"
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6586.jpg" alt="IMG_6586.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6586.jpg" alt="IMG_6586.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/shasta/IMG_6588.jpg"
+      title="Shasta, a volcano, dominates prominently the surrounding mountains."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6588.jpg" alt="IMG_6588.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6588.jpg" alt="IMG_6588.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/shasta/IMG_6591.jpg"
+      title="Looking down in the valley from Hellen Lake."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6591.jpg" alt="IMG_6591.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6591.jpg" alt="IMG_6591.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/shasta/IMG_6597.jpg"
+      title="Sunset on Casaval Ridge"
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6597.jpg" alt="IMG_6597.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6597.jpg" alt="IMG_6597.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/shasta/IMG_6605.jpg"
+      title="3:45ish: ready to leave Helen lake for the summit push."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6605.jpg" alt="IMG_6605.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6605.jpg" alt="IMG_6605.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/shasta/IMG_6613.jpg"
+      title="Half way up, it is time for the second part of the breakfast. Dawn is approaching."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6613.jpg" alt="IMG_6613.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6613.jpg" alt="IMG_6613.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/shasta/IMG_6614.jpg"
+      title="Jack is ready to confront the wind."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6614.jpg" alt="IMG_6614.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/shasta/IMG_6614.jpg" alt="IMG_6614.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/shasta/IMG_6623.jpg"
+      title="Approaching the cat walk, a narrow corridor on top of the Casaval ridge."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6623.jpg" alt="IMG_6623.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6623.jpg" alt="IMG_6623.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/shasta/IMG_6624.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6624.jpg" alt="IMG_6624.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6624.jpg" alt="IMG_6624.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/shasta/IMG_6632.jpg"
+      title=""
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6632.jpg" alt="IMG_6632.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6632.jpg" alt="IMG_6632.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/shasta/IMG_6635.jpg"
+      title="Mount Lassen in the background. Like Shasta, it usually get a lot of snow."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6635.jpg" alt="IMG_6635.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6635.jpg" alt="IMG_6635.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/shasta/IMG_6638.jpg"
+      title="The cat walk, the supposedly third class crux of the route. The snow was very good and made cramponing easy."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6638.jpg" alt="IMG_6638.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6638.jpg" alt="IMG_6638.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/shasta/IMG_6647.jpg"
+      title="Looking back on Casaval Ridge from its top. One more steep section, Misery Hill to reach the summit plateau."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6647.jpg" alt="IMG_6647.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6647.jpg" alt="IMG_6647.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/shasta/IMG_6649.jpg"
+      title="The summit plateau. The real summit is on the right. The wind has plastered snow on the rock faces."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6649.jpg" alt="IMG_6649.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6649.jpg" alt="IMG_6649.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/shasta/IMG_6654.jpg"
+      title="Chilling out on top of Misery Hill, the last difficulty of the route. It was quite windy. Only 300 feet of elevation gain before the summit."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6654.jpg" alt="IMG_6654.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6654.jpg" alt="IMG_6654.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/shasta/IMG_6676.jpg"
+      title="Jack, Pat and I (right to left) on the summit."
+      onclick="return hs.expand(this, config_shasta)">
+      <img class="lazy galleries/shasta" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shasta/IMG_6676.jpg" alt="IMG_6676.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/shasta/IMG_6676.jpg" alt="IMG_6676.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo">
+    <a class="vid_cursor" href="videos/shasta.mp4" onclick="return hs.htmlExpand(this, { contentId: 'shasta-video', preserveContent: false} )">
+      <img class="lazy" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="videos/thumb_shasta.jpg" alt="" />
+      <noscript>
+        <img width="160" height="120" src="videos/thumb_shasta.jpg" alt="" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
+
+<div class="highslide-html-content" id="shasta-video"
+    style="width: 641px">
+    <div class="highslide-body">
+      <video class="video" width="640" height="480" controls="controls" preload="none" poster="videos/shasta.jpg">
+        <source src="videos/shasta.mp4" type="video/mp4" />
+        <source src="videos/shasta.webm" type="video/webm" />
+        Your browser does not support the video tag.
+      </video> 
+    </div>
+</div>
 <a id="Moab"></a> 
 <ul class="titlebar">
   <li class="title">
